# ml-computer-vision-app

./: README.md
backend/: .gitignore  2.0  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 194b7867b6ed_initial_migration.py  67aa14bf2f93_initial_schema.py  9a82ca61b9d1_create_streams_table.py  f6ae9d590d45_update_table.py
backend/mlcv_app/: db_seed.py  main.py  routers.py  script.py
backend/mlcv_app/api/routers/: products.py  stream.py  users.py
backend/mlcv_app/core/: database.py
backend/mlcv_app/data/: products.py
backend/mlcv_app/models/: stream.py
backend/mlcv_app/schemas/: stream.py
backend/mlcv_app/services/: camera_manager.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/frontend-ml-app/: index.html  package-lock.json  package.json
frontend/frontend-ml-app/src/: App.css  App.tsx
frontend/frontend-ml-app/src/components/: AddVideoStreamModal.tsx  CameraCard.css  CameraCard.tsx  CameraRunningStatus.tsx  RtspCameraForm.css  RtspCameraForm.tsx  Sidebar.tsx  VideoStream.css  VideoStream.tsx
frontend/frontend-ml-app/src/data/: backend.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AddVideoStreamModal.css  AddVideoStreamModal.tsx  Sidebar.tsx
frontend/src/pages/: HomePage.tsx  StreamAddPage.tsx
frontend/src/pages/home/: HomePage.tsx
frontend/src/pages/streams/: AddVideoStreamModal.tsx  LiveStream.tsx  StreamAddPage.tsx  StreamStatusTable.tsx
frontend/src/utils/: money.js
